--- a/week_5/project1.ipynb
+++ b/week_5/project1.ipynb
@@ -82,7 +82,7 @@
     "        label_3 = tk.Label(window, text = f\"{i}\")\n",
     "        label_3.pack()\n",
     "    \n",
-    "def submit():\n",
+    "def enter():\n",
     "    username = username_entry.get()\n",
     "    department = department_entry.get()\n",
     "\n",
