--- a/week_8/Week 8 - Python-Pandas-Practice.ipynb
+++ b/week_8/Week 8 - Python-Pandas-Practice.ipynb
@@ -65,18 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'DataFram'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m lyst \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCSC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m102\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mis\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcourse\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mever\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Calling DataFrame constructor on list\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFram(lyst)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Print the output.\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'DataFram'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        0\n",
+      "0     CSC\n",
+      "1     102\n",
+      "2      is\n",
+      "3     the\n",
+      "4    best\n",
+      "5  course\n",
+      "6    ever\n"
      ]
     }
    ],
@@ -88,7 +91,7 @@
     "lyst = ['CSC', '102', 'is', 'the', 'best', 'course', 'ever']\n",
     " \n",
     "# Calling DataFrame constructor on list\n",
-    "df = pd.DataFram(lyst)\n",
+    "df = pd.DataFrame(lyst)\n",
     "\n",
     "# Print the output.\n",
     "print(df)"
@@ -219,7 +222,8 @@
     " \n",
     "# Convert the dictionary into DataFrame \n",
     "df = pd.DataFrame(data)\n",
-    " \n",
+    "\n",
+    "\n",
     "# select two columns\n",
     "df[['Name', 'Qualification']]\n"
    ]
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "FileNotFoundError",
@@ -342,7 +348,7 @@
     "# making data frame from csv file\n",
     "data = pd.read_csv(\"employee_records.csv\")\n",
     "\n",
-    "df=datas.iloc[0]\n",
+    "df=data.iloc[0]\n",
     "\n",
     "# print excel\n",
     "print(df)"
@@ -365,7 +371,7 @@
     "import pandas as pd\n",
     " \n",
     "# making data frame from csv file\n",
-    "data = pd.read_csv(\"bcg.cs\")\n",
+    "data = pd.read_csv(\"bcg.csv\")\n",
     "\n",
     "df=data.head(1)\n",
     "\n",
@@ -491,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
